governance-shared/baselines/3.21.1/ChronoPM-Project/references/05-query-rules.md
# 查询约束规则

本规则适用于用户查询项目状态时的信息检索和回答规范。

### 1.0 简单查询硬规则（v3.18.0，与 SKILL 底线 14–16 同文）

简单查询只载本文件、不加载 `reply-norm-skill/` 全文时仍须遵守（违反=本轮对外失败）：

14. **语种**：对用户正文 = 用户本轮输入语种（中文问中文答）。不得默认英文。内部推理不得出现在用户可见正文。
15. **禁止输出思考过程**：不得出现 `I now have` / `Let me` / `Based on my findings` / 「让我先梳理」长推理段。结论直接说。
16. **禁止假执行门**：查询、汇报进度、只读分析 **不准**问「是否执行此方案 / 是否基于文档继续执行 / 要不要按这个 plan 做」。用户没要方案就不要造方案确认。真确认才走 00 §5.0。

细则见 `reply-norm-skill/references/reply-rules.md`（本场景默认不加载全文）。

---

## 1. 查询处理流程

```
用户提问 → 判断问题类型 → 按路由表加载对应提示词 → 前置检查 pm-decisions.md（见 §1a，**实时读，禁止从 brain 抄待拍板**）与 inbox（见 §1b） → 有 brain 且 facts_fingerprint 一致则先读 `context/brain.md`，再最多打开 1～3 个事实文件；无 brain / 无 .state / 脚本失败则读原文并声明 as-of → 输出结论+证据指针+不确定项

### 1.0a 回复粒度（v3.21.0，≤40 行）

默认 L0/L1，末尾带证据指针。禁止猜该给多长。

| 级 | 给什么 |
|---|---|
| L0 | 一句项目黑话 |
| L1 | 结论 + 关键值 + 证据 ID |
| L2 | L1 + 事实文件指针 + journal/原文摘录 |
| L3 | 脉络 / 表 / 历史 |

「现在怎样」→ L0/L1。「为什么/展开」→ L2。「有哪些/列出来/对比/周报/巡检」→ L3。纠偏回执必须旧值 vs 新值。简单查询仍不加载 00。
```

### 1a 待裁定事项前置检查

查询处理前（读取事实源之前），先读本项目 `ai/pm-decisions.md` **八块开放行之和**（无该文件 = N=0，懒建，不报致命）：

- 开放行合计 N > 0 时，在查询结果正文之前用白话横幅：「**有 N 件事等你裁定**」——编号 + 简述 + 裁定选项（只含仍开放行）。**N=0 不输出该横幅。** 禁止等 PM 主动问「还有什么没处理」（00 号 §8b.3）。禁止用内部类型名 / `total_pending` / 块号当横幅。禁止把本轮已裁定事项附在横幅里。
- 查询数据中与待裁定事项直接相关的条目，在正文数据后标注 `(待确认)`。
- 若本轮即处理裁定（PM 在确认/驳回），则不重复输出提醒区块。
- 简单查询**可不加载** `pm-decisions.md` 全文（见 §6.3）；仅执行确认/驳回/管理待裁定项，或查询结果受待裁定变更影响时加载。**本会话已读过则仍须在开头提醒。**
- 待办未绑定 WP 类缺口的输出句式走 DF-019（00 号 §8b.4）。

### 1b 过程日志与 inbox（查询侧）

- 查对话过程、本轮改了哪些文件、出处、用量：先读 `ai/logs/ops/_index.md`（无则尚未发生过过程日志），再按 index 打开当日 `logs/ops/YYYY-MM-DD.md` / `-errors.md` / `-pN`。旧列日文件声明「旧格式，不作数」。日志**不是**事实源，不能替代 todos/registers。
- **禁止**把 `todos/{date}/inbox/` 稿或 `.claim-*` 当事实源、进度或人员名单。
- 发现当日或最近合法日 inbox 非空：本轮 **AUTO 跑 C' 合并**（查询无并发），不向人派单、不把残留稿派成待办。合并规则见 06 号。

## 1.5 查询术语归一化

查询处理流程增加前置步骤：读本项目 `context/domain-glossary.md`（如存在）→ 扫提问中的术语缩写 → 仅 `confirmed` 映射替换（`pending` 输出提示"按候选理解"）→ 按标准名称进入路由表 → 正常查询流程。

**示例：** 用户问"农专注销进度"；"农专"为 confirmed，映射为"农民专业合作社"，按"农民专业合作社+注销"路由到任务/风险/里程碑查询。

## 1.6 登记册编号双格式兼容（v3.0.0 查询侧，R16）

各登记册新号已改秒级时间戳制（写侧规则见各域规则文件），存量旧顺序号**保留不改不重编**。按编号查询、引用、级联时，新旧两种格式必须同时识别，不得因格式不符判定"编号不存在"：

| 登记册 | 新号格式 | 旧号格式（兼容） | 写侧规则 |
|---|---|---|---|
| 风险 | `R-NNN`（v3.7.0 新号） | 时间戳号 `R-{YYYYMMDD}-{HHmmss}` / `R-YYYYMMDD-NNN` | 04 号 §2.2；三格式兼容 |
| 问题 | `I-NNN`（v3.7.0 新号） | 时间戳号 `I-{YYYYMMDD}-{HHmmss}` / `I-YYYYMMDD-NNN` | 04 号 §2.2 |
| 决策 | `D-{YYYYMMDD}-{HHmmss}` | `D-YYYYMMDD-NNN` | 08 号 |
| 合同 | `CON-{YYYYMMDD}-{HHmmss}` | `CON-NNN` | 18 号 Step1 |
| 导入批次 | `IMP-{YYYYMMDD}-{HHmmss}` | `IMP-YYYYMMDD-NNN` | 13 号 |
| 词库术语 | `G-{YYYYMMDD}-{HHmmss}` | `G001` 等 `G+三位数字` | 17 号 §3.6 |
| PM 偏好 | `PF-{YYYYMMDD}-{HHmmss}` | `PF001` 等旧号 | 21 号 §4 |

同秒冲突号带 `-02`/`-03` 尾缀，查询时按完整编号精确匹配，不得截断尾缀归类。

---

## 2. 问题类型与路由

| 问题类型 | 示例 | 需读取的事实源 |
|----------|------|----------------|
| 进度查询 | “项目进展怎么样？” | `wps/_index.md` + `wps/WP-*.md` + PLAN §3 引用简表（**计划进度只聚合 WP，禁止从 PLAN 正文待办行统计**）；待办按 WP Ref 实时聚合 |
| 风险查询 | "当前有哪些高风险？" | risks/risk-register.md |
| 问题查询 | “有什么阻塞？” | issues/issue-register.md, todos/{date}/ 待办文件（已阻塞状态） |
| 任务查询 | “张三在做什么？” | todos/{date}/ 待办文件（按 Owner 筛选） |
| TD 编号反查 | "TD-CJJ-20260820-001 是谁的？""TD-SJJ-xxx" | 最新合法日 `todos/{date}/_index.md` **§6 TD 缩写映射**（双键：先匹配现行缩写，未中再匹配历史别名）；命中后读该人 todos。旧号不重编。跨项目归并请用 Portfolio（按中文名，不按缩写） |
| 需求查询 | "需求完成多少了？" | requirements/requirement-register.md |
| 源文档 / 拆解产物 | "这份合同拆了没？""SRC-001 摘要" | 先读 `requirements/sources/_index.md` → `_digest.md`；取证才读 atoms/facts（分片先读 atoms/_index.md）。未零清旧结构 → 门禁阻断并出零清清单 |
| 对账 / 查重 | "对账""同源合同" | WF-SD-1（07 §8.12）；提示一次不阻断主体任务 |
| 重拆 / 二次拆解 | "再拆一下这份" | WF-SD-2（07 §8.6）；指纹未变则跳过 |
| 风险/问题历史 | "某风险怎么演变的" | `risks/index.md` 或 `issues/index.md` → 活跃册条目时间线表；必要时按索引读归档册（归档=活历史，索引受控可读；禁止遍历 `backup/`） |
| 查词义 / 查词库条目 | "这个词是什么意思？""查一下农专" | 本项目 `context/domain-glossary.md`（N-27）。只返回词库条目；`confirmed` 给标准词+释义，`pending` 标注候选。跨项目查词请用 Portfolio glossary-index 指针，本包不代查他项目 |
| 成本查询 | "预算执行情况？" | `project-info/budget.md`（项目预算/P&L）。**不得**与人员能耗混读 |
| 某人能耗 / 成本损耗 / 能效 | "张三能耗""某人成本损耗""看一下能效" | 该人**最新**待办文件 `todos/{最新合法日}/{owner}.md` **§0.6**；按日并置同日文件 **§1 待办** 与 **§3 工作日志**。禁止伪造任务分摊。预算成本仍走 `project-info/budget.md`，两路不得混（N-44） |
| 决策查询 | "上次为什么决定用A方案？" | decisions/decision-log.md |
| 里程碑查询 | “M02什么时候能过？” | PLAN 文件（WP 所属阶段）, todos/{date}/ 待办文件 |
| 周报查询 | "本周周报呢？" | 已完结周直读 `reports/weekly/YYYY/YYYY-Wxx.md` 存根；本周实时从 todos 汇聚（01 号 §3.1） |
| 时间线报 / 月报（自然月特例） | "7月1日到7月20日进度""上个月月报" | `reports/timeline/YYYY-MM-DD_YYYY-MM-DD-[project]-时间线报.md`。首次生成时懒建目录。判重四案见 01 号 §4.2：仅精确重合直读，否则整段从 todos 重汇聚。月报=自然月区间时间线报，禁止写入 reports/monthly/ |
| 个人日报 / 某人某天汇报 / 昨天日报风险点问题 | "昨天日报有什么风险点？""张三今天汇报了什么？" | todos/{date}/{owner}.md §2 日报存档 + §3 工作日志（阻塞事项/潜在风险）；**默认先读此路径，禁止先探测 reports/daily/** |
| 项目日报查询 | "X月X日的项目日报？""上个月项目日报" | 内容查询默认先读 todos/{date}/*.md §2+§3。明确要「项目日报文件」时：历史日期先查 `reports/daily/project/` 存根（精确重合直读）；无存根则从 todos 实时汇聚（当日可覆写，历史生成即存根）。目录不存在 = 未生成，不报错。个人日报不在此路径。 |
| 资源查询 | "团队有几个人？""张三现在在哪个项目？" | 最新合法日 `todos/{date}/_index.md` **§1 花名册**（在岗/空闲/请假/借出/待进场/已出组）+ 有待办者个人文件 §0 / §0.5。跨项目查询请使用 ChronoPM-Portfolio |
| 资源流转查询 | "张三什么时候调走的？""本周人员变动" | 该人待办 **§0.5 进出组记录**（按日期筛选）；无待办文件的人只读花名册 §1 状态/备注。禁止读 `resource-register` / `transfer-log` |
| 跨项目查询 | "三个项目整体进度如何？""哪个项目风险最高？" | 提示使用 ChronoPM-Portfolio；本包只答本项目 |
| 计划变更计数 | “XX 变更了几次？” | todos/{date}/ 待办文件（计划变更次数） |
| 延期计数 | “XX 延期了几次？” | todos/{date}/ 待办文件（延期次数） |
| 超期状态 | “现在哪些任务超期了？”“还有什么没做完的？” | todos/{date}/ 待办文件（见 §6.5/§6.6） |
| 过程日志 / token / 漏条款 | "这次拆解用了多少 token？""哪条漏了""字段抽歪了没有" | 先读 `logs/ops/_index.md` → 当日表 A / 表 B。不读 inbox/claim/runs。无 index = 尚未发生 |
| 等你裁定 / 待确认事项 | "还有什么没拍板？""待确认有哪些" | `pm-decisions.md` 八块开放行（横幅 N=开放行之和）。简单查询可不加载全文，本会话已读过则仍须提醒 |

### 2.0a 查询默认过滤行为

任务/待办类查询的默认过滤、首行摘要、展开触发词与未确认终态可见性，统一见本节「待办清单查询输出规范」。本条不再单独定义过滤口径，避免双口径。

### 待办清单查询输出规范（v3.0.0，覆盖原 §2.0a）

适用于一切待办清单查询（含「我的待办」自查 / 查询某人 / 任务列表）。

**「我」**：读 `ai/context/pm-profile.md` 的 `current_operator`。空则 ASK「检测到当前操作人未设置，请问您是？」未声明前不把查询解析到任何人。**禁止**用 `pm_name` 回退当「我」。声明后写入 `current_operator` 再查。点名某人则按该人名，不走本条。

1. **首行固定摘要**：`您今日待办共 {总数} 条（未办结 {X}、已办结 {Y}）`。单项目不要写「跨 N 个子项目」。
2. **默认只列未办结**：待处理 / 进行中 / 已阻塞。（待办状态枚举无「待评审」；评审是独立待办）
3. **已办结默认不列**：已完成 / 已取消 / 已转出。
4. **未确认终态例外**：`Confirmed By=待确认` 的终态（含 DF-013 自动完成）默认仍可见——列未办结行或单列「待确认完成」分组，**禁止当已办结隐藏**。首行摘要可标注待确认数。
5. **展开触发词**（归一集合，AI 不得自行展开）：全部 / 含已完成 / 所有任务 / 展示所有 / 完整展示 / 所有待办（及同义显式表达）。
6. 跨项目待办聚合查询请使用 ChronoPM-Portfolio（输出规范同此，由 Portfolio 包执行）。
7. **每一行必须写出待办编号** `TD-{缩写}-{YYYYMMDD}-{NNN}`，不得用 1、2、3 代替。缩写取当天 `_index` **§6 缩写映射**的现行缩写；映射没有则用花名册 §1 缩写列。00 号 CQ-4 的 1/2/3 只用于裁定选项。用户说「第 2 条」可按屏幕顺序认，但那一行仍必须有 TD 号。对外确认仍禁止甩文件路径/章节号；**待办编号是业务主键，查询必须给**。

### 2.1 跨项目查询

跨项目查询请使用 ChronoPM-Portfolio。本包仅回答本项目范围；疑似跨项目则提示到对应项目对话 / Portfolio。

---

## 2.5 快速查询路由（Quick Query Routing）

用户提待办/计划/进展类查询时，AI 必须优先读取索引文件，不得默认全量扫描日报、会议纪要和历史文件。

### PM 待办查询输出规范

PM 问"我明天的待办""明天做什么"时，AI 必须输出 **PM 全景待办视图**（非仅个人任务），缺一不可的 9 章节：

| # | 章节 | 内容要点 |
|---|------|----------|
| 1 | PM 直接任务 | PM 本人需亲自完成的任务 |
| 2 | 全团队明日计划 | 按人员列出，含进度、关联里程碑、风险标记 |
| 3 | 需重点跟进的风险 | open 高/中风险，含今日变化和建议动作 |
| 4 | 需重点跟进的问题 | 未关闭问题，含是否延期和建议动作 |
| 5 | 里程碑进度 | 本项目当前里程碑偏差和阻塞项 |
| 6 | 资源变动提醒 | 请假/借调/离场人员及其影响 |
| 7 | 本周计划对照 | 本周计划项是否按计划推进 |
| 8 | 待协调事项 | 跨项目/需管理层协调的事项（跨项目项提示到对应项目对话 / Portfolio） |
| 9 | 无计划项提醒 | 明确标注哪些人员无直接计划项 |

输出结构按上表 9 章节组织（v2.0.0 起无独立输出模板，章节规格即本表）。

**数据读取路径（按优先级）：** ①PM 当日待办文件 `todos/{date}/{PM姓名}.md`（PM 待办）→ ②当日绑定文件 `todos/{date}/_index.md`（全团队入口；花名册=§1，当日参与=§3）→ ③本项目 `todos/{date}/{owner}.md` 待办文件（进度 / §0.5 流转）→ ④`risks/risk-register.md`（open 风险）→ ⑤`issues/issue-register.md`（未关闭问题）→ ⑥PLAN 文件（WP 所属阶段）→ ⑦`_index` §1 花名册 + 个人 §0.5（资源变动）→ ⑧本项目最近项目日报存根（无则从 todos 汇聚）→ ⑨本项目最近会议纪要。

**禁止行为：** 只列 PM 个人任务就结束；不读待办文件就答"没有相关任务"；不展示团队成员明日计划。

### Quick Query 路由表

| 用户问题 | 优先读取 | 兜底读取 | 禁止 |
|---|---|---|---|
| 我明天/今天的待办 | PM 当日待办文件 `todos/{date}/{PM姓名}.md` + 绑定文件 `todos/{date}/_index.md` | 本项目 `todos/{date}/` 待办文件 | 全量扫描所有日报/会议 |
| 明天大家做什么 | 绑定文件 `todos/{date}/_index.md` → 各人待办文件 | 本项目 `todos/{date}/` 待办文件 | 创建临时脚本扫描 |
| 本周重点是什么 | `todos/{date}/` 待办文件（按本周 Due Date 过滤） | 最近周报 + PLAN 文件 | 全量扫描历史周报 |
| 某人的任务 | **直接读取** `todos/{today}/{owner}.md`；若文件不存在 → **触发 Step 0 结转检查**（读前一天 `_index.md` → 扫描未办结待办 → 生成今天文件）→ 读取生成后的文件（见 §2.5a） | 绑定文件 `_index.md`（仅用于确认当天有哪些人） | 逐日扫描该人历史待办（除非用户明确问"历史"） |
| 项目进展如何 | `wps/_index.md` + `wps/WP-*.md` + PLAN §3 引用简表（**只聚合 WP，不读 PLAN 正文待办行**） | 待办按 WP Ref 实时聚合 | 把 PLAN 当待办清单；全量扫描过程记录 |
| 当前风险 | `risks/risk-register.md`（开放/监控中） | 最近周报 | 全量扫描历史周报 |
| 当前问题 | `issues/issue-register.md`（未关闭） | `todos/{date}/` 待办文件（已阻塞） | 全量扫描历史日报 |
| 资源情况 | 最新合法日 `_index.md` §1 花名册 + 当日 §3 参与表 | 个人待办 §0 / §0.5 | 读 `resource-register` / `transfer-log` / `backup/` |
| 画图 / 责任链图 / 排布图 / Mermaid | `wps/_index.md`（+ todos `_index` / PLAN §3，排列见 11 号 §17.2） | — | 写入 outputs 或走 P-OUTPUT；编造 WP 边；把 `_wp-chart.md` 当事实源；无关联横折三列 |
| 查词义 / 这个词什么意思 | `context/domain-glossary.md` | — | 编造释义；扫描 `backup/` |
| 某人能耗 / 成本损耗 / 能效 | 该人最新待办 **§0.6**，按日并置同日 §1 / §3 | `project-context` 计量单位（折金额仅查询时用可选单价临时算，不落表） | 与 `project-info/budget.md` 混读；伪造任务分摊；为回填建历史空目录 |
| 变更了几次/延期了几次 | `todos/{date}/` 待办文件（计划变更次数/延期次数） | Change Log（计数缺失时） | 扫描快照/日报 |
| 现在哪些任务超期 | `todos/{date}/` 待办文件 | 最近日报索引 | 扫描日报原文 |
| 某需求在不在合同/招投标/立项范围内（范围判定） | `contract-register.md`（Step0 前置路由）→ `requirements/atoms/atom-index.md`(L1) → 目标 `{category}-index.md`(L2) → 命中 ATOM 全文(L3) → `requirements/canonical/canonical-index.md` | 命中 ATOM 全文(L3) → `canonical-index.md` | 全量扫描所有 ATOM/category 文件 |
| 某需求在不在合同 N 范围内（指定合同） | 本项目 `requirements/contract-register.md` 定位合同 → 本项目 `canonical/` + 三级索引 | 本项目 atoms/canonical | 全量扫描所有 ATOM/category 文件 |
| 需求详情/双视图（"某需求具体做什么/怎么实现/原型在哪"） | `requirements/requirement-register.md`（REQ 条目：功能描述 + 实现视图 + 原型/文档链接）→ 有 Canonical ID 时读 canonical 派生业务视图 | 关联 ATOM 全文（L3） | 与范围判定路由（上一行）区分：本行查需求实体详情，不走 contract-register |

### 2.5a 待办查询即服务规则（v2.1.0 新增，MANDATORY）

**触发条件**：用户查询某人的待办（如"查一下朱嵩的待办""张三今天在做什么"）。

**强制流程**：
1. **直接读取** `todos/{today}/{owner}.md`（today = 当前日期）
2. 若文件存在 → 直接输出待办内容
3. 若文件不存在 → **触发 Step 0 结转检查**（`00-pm-main-rules.md` §4c / `22-carried-over-rules.md`）：
   a. 读前一天 `todos/{date-1}/_index.md`
   b. 扫描该人前一天的未办结待办
   c. 生成 `todos/{today}/{owner}.md`（写入结转待办）
   d. 输出"已自动生成今日待办文件（结转自 {date-1}）" + 待办内容
4. **禁止**：逐日扫描该人的历史待办文件（除非用户明确问"朱嵩上周的待办""朱嵩历史任务"）

**违规处理**：若 AI 逐日扫描历史文件而非直接读取今天文件，必须在输出中标注「⚠️ 查询路径错误：应直接读取今天文件，而非扫描历史」。

**安全底线 2 约束**：查询触发的结转生成属于"查询触发的事实源写入"，必须满足：
1. 生成的文件头部标注 `[来源: 查询触发结转（自动生成），结转自 {date-1}]`
2. 查询输出中明确告知"今日文件不存在，已自动生成结转"，并提示 PM 确认
3. PM 明确否认（如"此人今日休假/已离组"）→ 删除生成的文件，并在 `_index.md` 记录否认原因

### Quick Query 路由注：RI 范围判定四步路由（CR-20260813-002）

跨源范围判定查询（"XX 需求在不在 X 范围内"）必须按**四步路由**执行，对齐 §6.1 最小读取。先经本项目 contract-register 定位，再走三级索引：

- **Step 0 读本项目 contract-register**：读取 `requirements/contract-register.md`。**不再路由集层存储**。**登记册为空 → 触发补录引导**（最小字段：ID/名称/scope_level/覆盖/status），不返回臆造结论（D5）。合同登记册结构见 07 号 §8.9。跨项目检索由 ChronoPM-Portfolio 遍历 + 指纹去重。
- **Step 1 解析合同指向**：
  - 用户指定合同（CON-XXX 或合同名）→ 在本项目 `requirements/canonical/` 检索；`supplement` → 经 `parent_contract_id` 回溯父合同后仍在本项目路由。
  - 用户未指定合同 → 先列出本项目 contract-register 中所有合同候选供用户选择；或按"全部范围"逐合同检索后合并、按合同标注各结论。
  - 登记册为空/无匹配合同 → 提示补录，不臆造。
- **Step 2 本项目三级索引加载**（对齐原三级索引）：
  1. 加载 L1 本项目 `atoms/atom-index.md`（路由表，~6 行）→ 判断搜索哪些 category。
  2. 加载本项目 `atoms/{category}-index.md`（L2 类别倒排，含 `norm_text` 摘要覆盖索引）→ keyword + 语义扫读定位候选。
  3. 仅加载命中的 ATOM 全文（L3，3-5 条）→ 看 raw_text + evidence。
  4. 关联本项目 `canonical/canonical-index.md` → scope_scope + 证据链。
- **Step 3 输出带合同维度的结论**：返回 `scope_scope(result)` + `contract_refs`（关联合同 ID 列表）+ 证据链。多合同覆盖 → 逐合同列结论；`supplement` 结果含补充协议与父合同双 ID。

单次范围判定总加载约 200-400 行，不加载未命中 category 文件。**P1 语义兜底**：查询前查 17 号词库扩展同义词；未命中时用 L2 norm_text 摘要语义扫读；仍无果输出降级提示（换关键词 / 查词库同义词 / P2 向量增强），不臆造结论。

### 需求上下文加载规范（双视图，CR-20260815-001）

WF-1/WF-2 等涉及待办的流程，当待办存在 `Requirement Ref`（REQ-XXX-NNN）时，按 07 号 §8.10.4 链路加载需求上下文：

1. 读取 REQ 条目：标题 + 功能描述（业务上下文，≤2 行）+ 实现视图（≤1 行）+ 原型/文档链接（≤1 行）。
2. REQ 有 Canonical ID 时，可补充派生业务视图（business 类 ATOM norm_text 聚合，见 07 号 §8.10.1）。
3. **性能控制**：单次最多加载 10 条 REQ；超出时只加载当轮直接涉及的待办对应 REQ；字段缺失降级输出已有字段，不阻塞。
4. 输出示例：`📋 需求上下文：TD-XXX「完成订单列表筛选接口」→ REQ-ORD-012｜业务：支持按状态筛选查询｜实现：OrderService.queryByStatus()｜原型：路径/链接`。

### Quick Update 路由表

用户提待办/状态/进展类更新时，AI 必须按 WF 路径执行，不得逐步临时推导。
> ⚠️ 写入动作仍须遵循 SKILL.md §7 安全底线第 2 条（事实源写入待人工确认 + `pm-decisions.md` 登记），不因路由预定义而绕过确认环节。

| 用户指令 | WF 路径 | 核心读文件 | 核心写文件 | 禁止 |
|---|---|---|---|---|
| 更新某人的待办/状态 | WF-1 | 待办文件 + issue/risk-register | 待办文件 + register + pm-decisions | 不加载 01/06/10 规则文件 |
| 提交日报/个人进展 | WF-2 | project-context + 待办文件 + requirement-register（仅待办带 Requirement Ref 时，按 §2.5 需求上下文加载规范） | 待办文件（工作日志段） | 不跳过待办状态同步 |
| 提交会议纪要 | WF-3 | 纪要原文 + 待办文件 + register | 纪要归档 + 事实源建议清单 | 不跳过行动项提取 |
| 需求变更 | WF-4 | requirement-register + 待办文件 | change-log + 影响分析 | 不跳过影响分析 |
| 写周报/生成周报 | WF-5 | 本项目事实源 | 本项目周报 `reports/weekly/` | 不生成集周报（已迁 Portfolio） |
| 人员变动/资源流转 | WF-6 | `_index` §1 花名册 + 待办 §0.5 | `_index` §1 + 有待办者 §0.5（结转/转出） | 不自动改花名册/§0.5（须确认）；不写已退役 resource-register / transfer-log |

### 查询性能规则

1. 查询类请求必须优先读取索引文件。
2. 不得默认扫描全部日报、会议纪要、周报和历史文件。
3. **不得为简单查询默认创建临时脚本扫描目录。**
4. 查询优先读取最近时间范围：待办=今天/明天/本周；日报=最近 7 天或当前 `YYYYMM` 索引；周报=最近 2 周；会议=最近 5 次索引；风险/问题=当前 open。
5. **禁止将 v1.x 遗留目录作为查询数据源/兜底源（v2.1.0，需求十二）**：禁用路径清单见 `06-file-rules.md` §12.5（reports/daily/personal/、summaries/、tasks/board.md|backlog.md|_historic/ 等）；命中禁用路径时输出"迁移未完成"提示并触发 §7.3.2b 迁移补做，而非就地读取/维护。
6. 索引缺失时提示用户是否重建，不自行全量扫描。
7. 仅当用户明确要求"全面回顾/追溯/从历史中找"时才扩大扫描范围。

### Historical Todo Query Routing（历史计划查询）

查询历史计划/往日计划/实际完成/计划偏差时，**不得扫描个人日报**，必须优先读取计划快照与实际执行摘要。

**触发词：** 往日计划、历史计划、过去某天、之前某天、某月某日原计划、实际完成、计划完成情况、计划偏差、计划有没有完成、上周计划对照、某人上周每天计划。

**查询顺序：** ①读对应日期待办文件 `todos/{date}/`（升级后日期）→ ②计划快照 `snapshots/daily/{date}.md` 或 `snapshots/weekly/{week}.md`（导入计划为 `imported-{date}.md`）→ ③查实际完成读 `actuals/` 对应文件 → ④快照/摘要不存在则读对应日项目日报存根或从 todos 汇聚 → ⑤用户确认后才允许扫描日报明细。

| 用户问题 | 读取路径 |
|---|---|
| 8月10日大家原计划做什么 | `snapshots/daily/20260809.md`（导入计划为 `imported-{date}.md`）|
| 8月10日实际做了什么 | `actuals/daily/20260810.md`（升级后日期 → `todos/2026-08-10/` 工作日志段）|
| 8月10日计划完成了吗 | `snapshots/daily/20260809.md` + `actuals/daily/20260810.md` |
| 上周计划偏差 | `snapshots/weekly/{week}.md` + `actuals/weekly/{week}.md` |
| 某人过去一周每天计划 | 多个 `snapshots/daily/{date}.md`（升级后日期 → 对应日待办文件）|
| 导入的那批计划 | `snapshots/daily/imported-{date}.md` |

**热/冷数据分离：** 当前/近期待办直接读 `todos/{date}/` 待办文件（活数据），更早历史转向 `snapshots/` + `actuals/`（冻结数据）。归档日报读取协议（升级前后日期拼接）见 `15-snapshot-rules.md` §3.2。

### 待办文件缺失时的处理

发现当日待办文件/绑定文件缺失时，提示"当日待办文件尚未创建，是否现在初始化"，可参考信息：PLAN 文件 WP 表、最近 7 天待办文件（结转候选）、最近 5 次会议纪要行动项、本周计划/周报，并询问是否现在创建。

### 禁止默认临时脚本规则

简单查询不得默认创建临时脚本（.js/.py/.sh）扫描目录。简单查询包括：今天/明天/本周待办、某人任务、当前风险/问题、项目进展、本周重点、哪些问题未关闭、变更/延期计数。**必须优先读索引和事实源**，仅以下情况允许脚本：①用户明确要求全量扫描/统计大量文件；②索引缺失且用户确认允许扫描重建；③复杂数据分析需编程处理。

---

## 3. 信息检索优先级

1. 优先读事实源文件（待办文件/register/log）——当前状态真实来源。
2. 事实源无信息再查过程记录（日报、会议纪要）。
3. 过程记录与事实源矛盾时以事实源为准，但须标注矛盾并提示项目经理确认。
4. 记忆有而事实源无的信息须标注"记忆中有但事实源中未记录"。

### (3)a 里程碑终态事件豁免

当过程记录（日报、会议纪要、评审记录）中包含**里程碑级终态事件**（如"评审通过""验收通过""测试通过""上线完成""联调通过""集成验证通过"等，完整列表见 `00-pm-main-rules.md` §10.2）且该事件结论与事实源（待办文件）状态矛盾时：

1. **不适用**本条 (3)"以事实源为准"规则。
2. AI 应：
   - 基于过程记录中的终态事件推导结论（推导链见 `00-pm-main-rules.md` §10.3）；
   - 在输出中标注矛盾："⚠️ 待办文件显示 {状态A}，但 {过程记录} 记录 {终态事件}，推导为 {结论}"；
   - 输出 SUGGEST 建议同步待办状态（走 `00-pm-main-rules.md` §8a 强制呈现）。
3. 推导结论**不直接修改**事实源，仅通过 SUGGEST 建议同步。
4. 项目可在 `context/project-context.md`「终态事件扩展」扩展终态事件列表。实体枚举查询从 WP §3（功能点） 聚合，不报 entity-registry 缺失。

此豁免确保推导基线（`00-pm-main-rules.md` §10）能正常生效，不被本条 (3) 压制。

## 4. 回答规范

### 4.1 输出结构

```
# [标题]
## 1. 回答正文（直接回答，结构化呈现）
## 2. 信息来源（[来源]：文件路径；查询可保留路径，不强制章节号）
## 3. 不确定项（原因/影响 + 缺失信息需补充什么）
```

### 4.2 回答原则

先结论后展开；状态/进度/成本用表格呈现；每个关键数据点标注来源；信息矛盾不可隐藏须显式标注；信息不足直接说明"当前事实源中无此信息"不推测填充；**查询类回答不输出"建议更新清单"**（除非用户明确要求"帮我更新"）。聚合计数/超期查询除遵循本节外，另见 §6.5/§6.6（输出为计数表/超期清单，字段见该两节）。

---

## 5. 特殊查询处理

### 5.1 项目健康度查询

"项目健康吗？"按以下维度评估：

| 维度 | 评估指标 | 数据来源 |
|------|----------|----------|
| 进度健康 | 关键阶段偏差、待办延期率 | PLAN 文件（WP §8 关键阶段）, todos/{date}/ 待办文件 |
| 成本健康 | CPI、预算执行率 | project-info/budget.md |
| 风险健康 | 高/极高风险数量 | risks/risk-register.md |
| 质量健康 | 未解决问题数、P0/P1问题数 | issues/issue-register.md |
| 范围健康 | 需求变更次数、未确认需求数 | requirements/ |

**输出格式：** `项目健康度评估` 表（维度|状态🟢🟡🔴|指标|说明）→ `总体判断`（一段话）→ `需关注事项`。**状态判定：** 🟢 正常=偏差在容忍度内；🟡 关注=接近容忍度上限；🔴 预警=超出容忍度。

### 5.2 管理层摘要查询

"给一版管理层汇报"时输出结构化摘要，聚焦：里程碑进展、关键风险（高及以上）、关键问题（未解决 P0/P1）、成本偏差（CPI）、需管理层决策事项。

### 5.3 历史追溯查询

问"某个需求/任务/决策的历史"时：先查事实源当前记录 → 再查事实源底部 Change Log → 最后查过程记录（日报、会议纪要）→ 按时间线输出变更历程。

**待确认口径：** `Confirmed By: 待确认` 的记录**不进入**已确认口径的追溯结论（不计入"已确认的变更次数/确认生效的决策"），逐条标注"待确认"；已确认记录按正常口径输出。追溯路径适配 Change Log 分层归档：优先查活跃区 → `change-log/index.md` 导航 → 按月归档 `change-log/archive/YYYYMM-change-log.md`。

### 5.4 资源查询处理

人员状态六态（花名册唯一枚举）：**在岗 / 空闲 / 请假 / 借出 / 待进场 / 已出组**。映射：休假→请假、已离场/已调出→已出组、待入职→待进场。禁止使用待办状态「待评审」描述人员。

| 查询意图 | 读取文件 | 输出格式 |
|---|---|---|
| 当前团队全貌 | 最新合法日（date≤今天）`todos/{date}/_index.md` **§1 花名册** | 本项目花名册（姓名/岗位/状态/分配方式/首次进组） |
| 某人当前状态 | `_index` §1（按姓名）；有待办者可辅读个人 §0（联系方式/负责模块） | 单人信息卡（岗位/状态/分配方式/备注含 B 角或同时参与） |
| 某人流转历史 | 该人待办 **§0.5**（按姓名）；无待办文件则只读花名册 §1 备注 | 时间线（进组/出组日期/触发依据） |
| 本周人员变动 | 花名册 §1 状态变化 + 本周有文件者的 §0.5 | 变动表 + 影响分析 |
| 项目人手是否足够 | `_index` §1 + 00 号 §5c 容忍度 | 人力配置表 + 容忍度评估 + 风险提示 |
| 某人能耗 / 成本损耗 / 能效 | 该人最新文件 **§0.6**，按日并置同日 §1 / §3 | 日能耗表 + 同日待办/日志；不伪造分摊；不与 budget 混列 |

**资源查询回答原则：** ①当前状态以 `_index` §1 花名册为准、流转历史以个人 §0.5 为准；②某人状态为「借出/请假」须同时显示 B 角（花名册备注）；③触发资源容忍度风险规则（见 00 号 §5c）须在末尾标注「资源风险触发」；④跨项目人员查询请使用 ChronoPM-Portfolio；⑤`resource-register.md` / `transfer-log.md` 已退役，不作查询源（见 `backup/`）。

### 5.4a 人员查询事实源优先级

人员查询须遵循来源优先级，不得默认合并搜索多文件，不得另建花名册文件：

| 优先级 | 数据来源 | 用途 | 说明 |
|---|---|---|---|
| 1（主源） | 最新合法日 `todos/{date}/_index.md` **§1 花名册** | 人员当前状态 / 在组名录 | 查询状态默认只读此节；§3 是当日参与派生 |
| 2（身份/流转） | 个人待办 §0（联系方式/负责模块）、§0.5（进出组） | 应建档者的细节与流转 | 应建档者读个人 §0/§0.5；已出组或不在应建档才只读花名册。禁止仅为查询给已出组建档 |
| 3（缩写） | 同文件 `_index` **§6 TD 缩写映射** | TD 编号反查 | 双键：现行缩写 → 历史别名 |
| 4（投影） | 本项目 `context/project-context.md` | 项目背景团队列表 | 是花名册投影，非独立事实源 |
| 5（候选） | `todos/{date}/` 待办工作日志段 | 参与信号/候选证据 | 只能产生候选变更，不能自动认定为正式成员 |

**查询规则：** ①"本项目有哪些人/某人在哪/团队几人"默认只读 `_index` §1，不主动扫历史日待办 / project-context；②花名册备注含他项目名（同时参与）时，提示到对应项目对话 / Portfolio，本包不代查他项目文件；③字段为空可从该人 §0.5 推断但**标注"推断，未确认"**；④`_index` 不存在则读 `project-context.md`，标注来源与可能不准确；⑤花名册和 context 均不存在才扫待办文件（按 Owner 出现），标注"候选名单，未经确认"；⑥全无数据则输出"无法确定人员信息，建议初始化当天 `_index.md` §1 花名册"，不编造；⑦**禁止**：不得将待办文件出现过的人员自动认定为正式成员，不得未经确认自动修改花名册，不得读写已退役 `resource-register` / `transfer-log`。

### 5.5 跨项目健康度查询

跨项目 / 项目集整体健康度查询请使用 ChronoPM-Portfolio。本包只回答本项目健康度（§5.1）。

---

## 6. 最小读取原则（全局规则）

### 6.1 原则

先按问题判断最小文件集合；简单查询只读 1-2 个数据文件；不因存在路由表/参考资料而默认全量加载；不得枚举 ai/、references/、projects/ 目录；不在简单查询中读完整 SKILL.md 或 references/ 规则文件（含 00/21/23）。简单查询路由见 SKILL.md「简单查询」行：必须加载仅本文件。

### 6.2 简单查询 vs 复杂任务

| 类型 | 判断标准 | 文件读取规则 |
|---|---|---|
| 简单查询 | 版本/待办/风险列表/项目概况/日报提交状态/变更·延期计数 | 最多读 1-2 个数据文件；超 3 个须说明原因 |
| 复杂任务 | 日报处理/周报生成/风险评估/变更分析/需求评审 | 可读多文件，但须列出读取清单 |

### 6.3 快捷查询文件映射

| 查询意图 | 直接读取文件 | 跳过的环节 |
|---|---|---|
| 版本查询 | ai/.skill-version.json | 不读 SKILL.md、不读 06-file-rules |
| 待办查询 | **直接读取** `todos/{today}/{owner}.md`；若不存在 → **触发结转生成**（见 §2.5a） | 不读 SKILL.md、不读 01-daily-report-rules、**不扫描历史待办** |
| 风险列表 | 本项目 `risks/risk-register.md` | 不读 SKILL.md、不读 04-risk-issue-rules |
| 项目概况 | 本项目 `context/project-brief.md` | 不读 SKILL.md、不读 06-file-rules |
| 人员状态 | 最新合法日 `_index.md` **§1 花名册**（六态） | 不读 SKILL.md、不读已退役 resource-register / transfer-log、不读 09 号 |
| 查词义 | `context/domain-glossary.md` | 不读 SKILL.md、不编造释义 |
| 某人能耗/能效 | 该人最新待办 §0.6 + 同日 §1/§3 | 不读 `project-info/budget.md`、不伪造分摊 |
| 变更/延期计数 | `todos/{date}/` 待办文件 | 不读 SKILL.md、不扫快照/日报 |
| 过程日志 / token / 漏条款 | `logs/ops/_index.md`（再按日打开表 A/表 B） | 不读 inbox/claim/runs；不把日志当进度 |
| 等你裁定 | `pm-decisions.md`（按需；简单查询可不加载全文） | 本会话已读过则仍须提醒 |
| 今天谁没交日报 | 当日 `_index.md` §3 参与人员 vs 各人 §3 工作日志是否覆盖 | 不读 references/、不读 SKILL.md |
| 谁负责 / 分工 / RACI / 某实体前端是谁 | 该 WP `## 3c` 矩阵（无节则说明无点名分工） | 不读 00 全文；不把 TD Owner 当责任口径 |
| 某 WP 进度 / 现在怎样 / 国庆包 | 该 WP 功能点全表（阶段+上一站+人+待办+开放问题） | **禁止**摘要当唯一正文；D9 不藏进度表 |

**最小读取补充（B-17）：** 简单查询**不加载** `pm-decisions.md` 全文；仅当执行待裁定项的确认/驳回/管理，或查询结果受待裁定变更直接影响（需标注 `(待确认)`）时才加载。**本会话已读过则仍须在开头提醒。**

### 6.3a 安全升级（最小读取不得绕过写入）

最小读取**不得**用于写入或改事实源。本轮一旦出现更新 / 派活 / 拆文件 / 加待办等写入意图：立即离开仅-05 路径，按 SKILL.md §6 对应写入行加载（含 SKILL.md §7 安全底线），禁止停留在只读 05。偏好格式需要时只读 `ai/context/pm-profile.md` 数据文件，不因此加载 21 号规则正文。

**待办文件多表读取约定（v2.1.0，需求八/十三）：** 待办文件已拆为 3 表 + 备注区（模板见 `personal-daily-todo-template.md`），查询读取时：
- **待办进度** → 核心执行表"进度"列（不得再从备注列提取百分比）；进度↔状态冲突时按 01 号双轨仲裁：状态列为唯一权威源
- **工时/延期/变更次数** → 工时与变更表（按待办编号关联）
- **风险/问题/阻塞/溯源** → 关联与溯源表（按待办编号关联）
- **日报原文/加工日志** → §2 日报存档段 / §3 工作日志段
- 三表以**待办编号**为主键关联，跨表字段不得混读

### 6.5 聚合计数路由（A 类：计划变更/延期计数）

用户问"XX 变更了几次""XX 延期了几次""谁延期最多"等**聚合计数**问题时：
1. 只读 `todos/{date}/` 待办文件，按字段聚合：`计划变更次数`（按人/任务）、`延期次数`（按人）。
2. **不扫描** `snapshots/`、`actuals/`、日报或创建临时脚本（对齐 §6.1 最小读取 + 禁止临时脚本规则）。
3. 若待办文件计数字段缺失/为 0（旧工作区），回退到待办文件底部 Change Log 统计并在输出标注“推断，未确认”。
4. 输出按人/按任务的计数表，标注数据来源为待办文件（字段：人员/待办编号/标题/计数/最近变更时间）。

**待确认口径（B-18）：** `Confirmed By: 待确认` 的记录**不参与**"已确认的计划变更次数 / 延期次数"聚合统计；聚合正文数据后，与该类记录直接相关的条目标注 `(待确认)`，使其与已确认计数区分。

### 6.6 状态查询路由（B 类：超期判定）

用户问"现在哪些任务超期了""项目进度怎么样了""还有什么没做完/超期"等**状态判定**问题时，**实时计算**（非仅日报处理时）：
1. 读取 `todos/{date}/` 待办文件（当前 Due Date / Owner / Status / 计划变更确认状态）。
2. 当日待办文件不存在时，经绑定文件 `_index.md` 定位最近一日待办文件取最近完成状态——**不得临时扫描日报原文**。
3. 当前有效 Due Date 与今天对比：确认窗口期内（新变更未确认）按旧版 Due Date 判定；换人场景交接前归原 Owner。
4. 若待办文件 >24h 未更新，先提示“待办文件过期，建议先更新”，不拿过期数据当结论。
5. 输出超期清单 + 归属 + 预警项；**不写入延期次数计数器**（计数与状态判定分离）。

**待确认口径（B-18）：** `Confirmed By: 待确认` 的 Due Date 视为**未确认计划**，**不参与**“已确认计划延期/超期”判定与已完成统计；在状态判定正文数据后标注 `(待确认)` 逐条提示（含原值 vs 新值）。存量待办文件无 `Confirmed By` 的行按“已确认”处理。

### 6.7 WP 分层查询与倒排倒计时路由

用户问"PLAN-001 进度怎么样""本周计划做什么""今天做什么""WP-012 做了没""倒排还剩几天""倒排每日矩阵""每个人每天干什么"等**计划分层/倒计时/倒排矩阵**问题时：

| 查询场景 | 数据访问 | 输出 |
|---|---|---|
| 计划整体进度 / 看一下 XXX 计划 | 先闸 2（正常计划）：§3/§4 与 WP §8 对账，不一致**先写回盘上**。然后**原样输出完整 PLAN 文件**（含已落盘 §3+§4）。禁止用 todos 或现场拼 WP 列表代替文件。废弃计划告知已废弃+`superseded_by`，不投影。默认只列 `effect=正常` 的 WP。排期查询**只读 status=正常** 的计划 | 完整 PLAN MD |
| 某 WP 进度/状态 / 完整记录（WP-NNN） | 先定位 `wps/WP-*.md`；**当前状态=§7 链尾**；报 `effect`。废弃包告知+后继。待办按 WP Ref 实时聚合（不回写 WP §4）。未迁移文件若仍有「评审状态」列：原样展示已评审/未评审/—（脏数据待评审也原样），禁止翻译成十三阶段 | **完整表**（见下款）。禁止摘要当唯一正文 |
| 这计划谁没做完 / 还差谁 / 谁没排 | 闸 2 后读盘上 §4 的 ⏳ / `⚠️待安排人` | 未安排阶段与空岗 |
| WP 在哪些计划 | 读 WP `plan_ref`（正常）；问历史再扫废弃 §3 | 正常计划列表 |
| 哪些包没进任何正常计划 | 有 WP 文件、`effect=正常`、plan_ref 为空或不含任何正常 PLAN | 未入包清单 |
| 完成的工作包 / 已完成归档 | `wps/_index.md` §2 已完成归档 + 完成时间列 | 只列该段 |
| 废弃的工作包 / 废弃归档 | `wps/_index.md` §3 废弃归档 + 废弃时间列 | 只列该段 |
| WP 什么时候完成/废弃 | YAML `completed_at`/`retired_at`，对账 index 时间列 | 日期或 — |
| 今天做什么 | 当日待办文件 `todos/{date}/`（入口为绑定文件 `_index.md`）；溯源时按 Due Date = 今天过滤待办文件 | 当日待办列表（含 WP 归属） |
| 本周计划 | `todos/{date}/` 待办文件按本周 Due Date 过滤，按 WP 归集 | 按 WP 分组的待办列表 |
| 倒排倒计时 | 读 PLAN 文件倒排元数据（锚点日期/关键路径）+ 待办文件未完成待办 | 距截止日剩余天数 + 未完成 WP + 关键路径预警 |
| 哪些任务超期 | 复用 §6.6 B 类判定（含 WP Ref 归属标注） | 超期清单 |
| 倒排每日矩阵 | 读本项目 `ai/todos/{date}/` 待办文件 + PLAN 文件（若存在）；如需岗位标注辅读 `_index` §1 花名册。跨项目矩阵由 ChronoPM-Portfolio 聚合 | 人员×日期矩阵（行=Owner，列=工作日，格=待办简述） |
| 画图 / 责任链图 / 人员排布图 / Mermaid / 工作包总览（v3.19.0） | 读最新 `wps/_index.md` 进行中段 + 各 WP YAML `related_wps`/plan_ref/§1 日期/§8 当前阶段。须加载 11 号 §17 | **默认**按正常计划分章、每章独立 mermaid。**排列规则只认 11 §17.2 / §17.2.1**（有关联横排、无关联 `rInd` 竖排；禁止在本行复述 A～F）。节点编号/名称/yyyy-MM-DD 区间/阶段图标；不显示人员；同章才连线。对话输出 Mermaid；若已有 `wps/_wp-chart.md` 附链接。禁止 P-OUTPUT、禁止编造边。废弃/已完成不入默认图。人员图仅点名才出 |

**工作包查询输出（v3.20.0，撤销 v3.17.0 摘要当唯一正文）**：默认不把工作包 md 全文当散文贴进对话框（计划查询「原样输出完整 PLAN」不变）。进度/现在怎样的**正文必须是表**，不得只给三句摘要。

1. **完整表（默认）**：功能点全表（实体、当前阶段、上一站来自留痕末行「从阶段」、关联待办 Owner=当前谁做、§3c 角色人若有、未办结待办、开放问题/风险）。整包链尾状态 + effect 作表前一行说明。
2. **原件链接**：必须给出可点击的 `wps/WP-*.md` 路径。
3. **贴原文**：仅当用户明说「贴原文 / 把 md 打在对话框里 / 逐字发出」时，才在链接之外再逐字贴全文。
4. **禁止**：用摘要代替上表；用「大体差不多」省略未完成行；D9 藏进度表路径。

### 6.8 人查询（v3.20.0）

问「谁负责 / 分工 / RACI / 某实体前端是谁」走本节，**不改 §6.7 倒排主题**。简单查询只载本文件即可答。

| 问法 | 读 | 不读成 |
|---|---|---|
| 谁负责 / 分工 / RACI / 某实体前端是谁 | WP §3c | 当前待办 Owner；§8 整包阶段人（除非问的是整包阶段） |
| 当前谁在做 | 功能点关联待办 Owner | §3c 点名责任 |
| 谁做过某站（预演/测试…） | 功能点留痕子表 | §3c；当前 Owner |

无 §3c：说明无点名分工；若降级读 TD 必须标明「这是进度口径不是分工」。存量 `## 3c` 标题含分工/RACI/负责人即可读；标题对列不全仍认。

### 6.9 项目总览进度表（v3.20.0）

问「现在怎样 / 国庆包现在怎样 / 还差什么」且范围大于单个 WP：按 `wps/_index.md` §1 进行中列出**每个 WP 的功能点完整表**（同 §6.7 默认表），不得用项目三句话摘要当正文。弱结构投喂材料「还差什么」→ 该源 `rows.md` 全表 + 命中 WP 的完整进度表。

**倒排每日矩阵视图规格**：

1. **行** = 倒排范围内所有待办的 Owner（去重），按姓名列出；如需岗位信息，从 `_index` §1 花名册查并括注（标注来源）
2. **列** = 从今日起至锚点日期（截止日）的每个工作日
3. **交叉格** = Due Date 落在该列、Owner 为该行的待办标题简述；PM 希望在矩阵中呈现的非待办事项（如里程碑门禁、控制点），由 AI 在与 PM 确认后以独立行或标注列呈现，不作为默认待办格
4. 无待办的格子标 "—"
5. 数据必须从第 1 步圈定的数据源集合实时读取，禁止缓存或复用旧版
6. 同一人同天待办 >5 条时，格内只列前 3 条 + "等 N 项"

**降级策略（存量工作区兼容）**：

- 若 PLAN 文件不存在或无倒排 WP → 范围圈定改为“日期窗口（今日→锚点日期）+ 待办文件中 Due Date 过滤”
- 若待办文件无 WP Ref 列 → 行按 Owner、格按待办 Title，WP 列标注“（未关联 WP）”
- 降级场景下矩阵仍可生成，仅缺少 WP 归属信息

**性能约束**：WP 进度一律为待办文件实时聚合（不建进度索引文件，不回写 WP §4）；日/周查询直接读待办文件（绑定文件 `_index.md` 为当日入口，索引优先原则见 §6）；WP 查找先读 `wps/_index.md`。查看计划输出盘上全文，不从 todos 重聚。

---

## 7. 数据来源声明

### 7.1 适用范围

版本/任务/风险/项目概况/日报提交状态 5 类查询的回答末尾必须标注数据来源。复杂报告类（周报、分析报告等）按原输出规范，不额外增加数据来源声明。聚合计数与超期查询标注来源为待办文件（及所用索引）。

### 7.2 统一格式

```
数据来源：
- {文件路径}
文件更新时间：{实际时间 / 当前环境未提供，无法确认}
```

多文件时逐行列出路径，更新时间同样不可得则标注"当前环境未提供，无法确认"。

### 7.3 文件修改时间降级规则

能获取文件最后修改时间则显示；无法获取不得编造，仅显示数据来源路径并标注"当前环境未提供，无法确认"。
